# rejig

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: index.md
docs/examples/: analysis-recipes.md  codemod-recipes.md  optimization-recipes.md  refactoring-patterns.md  security-recipes.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: batch-operations.md  code-analysis.md  code-generation.md  code-optimization.md  config-files.md  docstrings.md  error-handling.md  finding-code.md  imports.md  line-operations.md  modifying-code.md  patching.md  project-management.md  security-analysis.md  transactions.md  type-hints.md
docs/reference/: analysis.md  patching.md  rejig.md  results.md  security.md  targets.md
docs/sample-projects/: README.md
docs/sample-projects/django-blog/: pyproject.toml
docs/sample-projects/django-blog/blog/: models.py  urls.py
docs/sample-projects/modern-fastapi/: main.py  pyproject.toml
examples/analysis-recipes/: index.html
examples/codemod-recipes/: index.html
examples/optimization-recipes/: index.html
examples/refactoring-patterns/: index.html
examples/security-recipes/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/batch-operations/: index.html
guides/code-analysis/: index.html
guides/code-generation/: index.html
guides/code-optimization/: index.html
guides/config-files/: index.html
guides/docstrings/: index.html
guides/error-handling/: index.html
guides/finding-code/: index.html
guides/imports/: index.html
guides/line-operations/: index.html
guides/modifying-code/: index.html
guides/patching/: index.html
guides/project-management/: index.html
guides/security-analysis/: index.html
guides/transactions/: index.html
guides/type-hints/: index.html
reference/analysis/: index.html
reference/patching/: index.html
reference/rejig/: index.html
reference/results/: index.html
reference/security/: index.html
reference/targets/: index.html
sample-projects/: index.html
sample-projects/cli-tool/: pyproject.toml
sample-projects/legacy-flask-app/: app.py  requirements.txt
search/: search_index.json
src/rejig/: __init__.py  result.py
tests/: __init__.py  conftest.py
tests/test_analysis/: __init__.py  test_complexity.py  test_dead_code.py  test_metrics.py  test_patterns.py  test_reporter.py  test_targets.py
tests/test_core/: __init__.py  test_rejig.py  test_results.py
tests/test_imports/: __init__.py  (+3 more)
(+255 files in other folders)
