[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rejig"
version = "0.1.0"
description = "A Python library for programmatic code refactoring and transformation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shannon Baker" },
]
keywords = ["refactoring", "cst", "libcst", "code-transformation", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "libcst>=1.0.0",
]

[project.optional-dependencies]
rope = [
    "rope>=1.0.0",
]
django = [
    "rope>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SpliFF/rejig"
Documentation = "https://spliff.github.io/rejig/"
Repository = "https://github.com/SpliFF/rejig"

[tool.hatch.build.targets.wheel]
packages = ["src/rejig"]

[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
