[project]
name = "sample-fastapi"
version = "1.0.0"
description = "Sample FastAPI application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.ruff]
line-length = 110
select = ["E", "F", "W"]
